--- a/WpfApp5/WpfApp5.csproj
+++ b/WpfApp5/WpfApp5.csproj
@@ -55,9 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="FontsDictionary.xaml">
-      <SubType>Designer</SubType>
+    <Page Include="Dictionary1.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
